# oak-deepseek

./: .buildinfo  LICENSE  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/workflows/: docs.yml  publish-to-pypi.yml
_modules/: index.html
_modules/oak_deepseek/: agent.html  client.html  core.html  engine.html  loop.html  loops.html  models.html  stream.html  tools.html  types.html  utils.html
_sources/: api.rst.txt  index.rst.txt
_static/: documentation_options.js
docs/source/: api.rst  conf.py
oak_deepseek/: agent.py  branch.py  client.py  core.py  engine.py  loop.py  loops.py  models.py  session.py  stream.py  tool.py  tools.py  types.py  utils.py
oak_deepseek/loops/: basic.py  strategies.py
test/: api_connection.py  chat_test.py  client_test.py  engine_test.py  memory_test.py  negotiation_test.py  negotiation_test_with_stream.py  restore_test.py  session_test.py  stream_test.py
