[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oak-deepseek"
version = "1.2.0"
description = "一个轻量AI Agent框架，基于DeepSeek API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "WyxGenius", email = "2389604361@qq.com"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.26.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/WyxGenius/oak-deepseek"
Source = "https://github.com/WyxGenius/oak-deepseek"

[tool.setuptools.packages.find]
include = ["oak_deepseek*"]